log
Tue, Sep 16, 2025  9:32:27 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Tue, Sep 16, 2025 11:26:26 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b6e3187
Tue, Sep 16, 2025 11:26:45 PM: 
 tests:  1|8
total_score: 0/70
9556b4c
Tue, Sep 16, 2025 11:27:26 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
69716e7
Tue, Sep 16, 2025 11:34:01 PM: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|6
total_score: 15/70
5ae2944
Tue, Sep 16, 2025 11:35:13 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
68dec50
Tue, Sep 16, 2025 11:37:30 PM: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
933f7c1
Tue, Sep 16, 2025 11:57:35 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|6
total_score: 15/70
51ad097
Wed, Sep 17, 2025 12:00:32 AM: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 25/70
5d22efb
Wed, Sep 17, 2025 12:02:45 AM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
34a05c9
Wed, Sep 17, 2025 12:08:09 AM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
3c91480
Sat, Sep 20, 2025 12:50:09 AM: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  21|2
total_score: 40/70
4595585
Sat, Sep 20, 2025  8:47:05 PM: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:99:45: error: 'return' with a value, in function returning void [-Werror]
     if(tree == NULL || node == NULL) return NULL;
                                             ^~~~
treemap.c:98:6: note: declared here
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
treemap.c:101:21: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if(node->parent = NULL && node->right == NULL){
                     ^
treemap.c:101:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(node->parent = NULL && node->right == NULL){
     ^~
treemap.c:122:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         else if(node->parent->left = node){
         ^~~~
cc1.exe: all warnings being treated as errors
47e3b2e
